--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,4 +18,4 @@ jobs:
             -v "${{ github.workspace }}/game:/game" \
             -w /game \
             nixos/nix:latest \
-            sh -c "make check"
+            sh -c "nix-shell -p gnumake --run 'make check'"
