--- a/game/.gitignore
+++ b/game/.gitignore
@@ -8,7 +8,9 @@
 # Godot-specific ignores
 .import/
 export.cfg
-export_presets.cfg
+
+# Build artifacts
+build/
 
 # Imported translations (automatically generated from CSV files)
 *.translation
