--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,25 +1,12 @@
-name: CI
+name: Build
 
 on:
+  push:
+    branches: [ main, build ]
   pull_request:
     branches: [ main ]
 
 jobs:
-  game-check:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Run game checks
-        run: |
-          docker run --rm \
-            -v "${{ github.workspace }}/game:/game" \
-            -w /game \
-            nixos/nix:latest \
-            sh -c "nix-shell -p gnumake --run 'make check'"
-
   build-linux:
     runs-on: ubuntu-latest
     steps:
