--- a/game/.gitignore
+++ b/game/.gitignore
@@ -1,3 +1,5 @@
+.ignore/
+
 # Created by https://www.toptal.com/developers/gitignore/api/godot,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=godot,visualstudiocode
 
