--- a/game/Makefile
+++ b/game/Makefile
@@ -1,6 +1,6 @@
 .PHONY: format check build build-linux build-windows build-all clean
 
-BUILD_CMD := docker run --rm -v "$$(pwd):/app" -w /app barichello/godot-ci:4.5.1 godot --headless --export-release
+BUILD_CMD := nix-shell -p godot --run "godot --headless --export-release
 
 help:
 	@echo "Available targets:"
@@ -21,11 +21,11 @@ check:
 
 build-linux:
 	@mkdir -p build/linux
-	$(BUILD_CMD) "game-linux" ./build/linux/project-epic-footsies-2.x86_64
+	$(BUILD_CMD) 'game-linux' ./build/linux/project-epic-footsies-2.x86_64"
 
 build-windows:
 	@mkdir -p build/windows
-	$(BUILD_CMD) "game-windows" ./build/windows/project-epic-footsies-2.exe
+	$(BUILD_CMD) 'game-windows' ./build/windows/project-epic-footsies-2.exe"
 
 
 build-clean:
