--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
             -v "${{ github.workspace }}/game:/game" \
             -w /game \
             nixos/nix:latest \
-            sh -c "nix-shell -p gnumake --run 'make check'"
+            sh -c "nix --extra-experimental-features 'nix-command flakes' develop -c make check"
 
   build-windows:
     runs-on: ubuntu-latest
@@ -31,7 +31,7 @@ jobs:
             -v "${{ github.workspace }}/game:/game" \
             -w /game \
             nixos/nix:latest \
-            sh -c "nix-shell -p gnumake --run 'make build-windows'"
+            sh -c "nix --extra-experimental-features 'nix-command flakes' develop -c make build-windows"
 
   build-linux:
     runs-on: ubuntu-latest
@@ -44,4 +44,4 @@ jobs:
             -v "${{ github.workspace }}/game:/game" \
             -w /game \
             nixos/nix:latest \
-            sh -c "nix-shell -p gnumake --run 'make build-linux'"
+            sh -c "nix --extra-experimental-features 'nix-command flakes' develop -c make build-linux"
