Create build CI check (#2)
* Add build command

* Remove export presets

* Add build check to ci

* Clean up build script

* Build with nix

* Add nix flake files

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,4 +18,30 @@ jobs:
             -v "${{ github.workspace }}/game:/game" \
             -w /game \
             nixos/nix:latest \
-            sh -c "nix-shell -p gnumake --run 'make check'"
+            sh -c "nix --extra-experimental-features 'nix-command flakes' develop -c make check"
+
+  build-windows:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Build for Windows
+        run: |
+          docker run --rm \
+            -v "${{ github.workspace }}/game:/game" \
+            -w /game \
+            nixos/nix:latest \
+            sh -c "nix --extra-experimental-features 'nix-command flakes' develop -c make build-windows"
+
+  build-linux:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Build for Linux
+        run: |
+          docker run --rm \
+            -v "${{ github.workspace }}/game:/game" \
+            -w /game \
+            nixos/nix:latest \
+            sh -c "nix --extra-experimental-features 'nix-command flakes' develop -c make build-linux"
