--- a/game/.gitignore
+++ b/game/.gitignore
@@ -1,3 +1,5 @@
+.ignore/
+
 # Created by https://www.toptal.com/developers/gitignore/api/godot,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=godot,visualstudiocode
 
@@ -8,7 +10,9 @@
 # Godot-specific ignores
 .import/
 export.cfg
-export_presets.cfg
+
+# Build artifacts
+build/
 
 # Imported translations (automatically generated from CSV files)
 *.translation
