--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Check formatting
         run: nix run .#check
 
-  check-markdown:
+  markdown-check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -34,7 +34,7 @@ jobs:
         uses: DeterminateSystems/magic-nix-cache-action@main
 
       - name: Check Markdown formatting
-        run: nix-shell -p python3Packages.mdformat --run "mdformat . --wrap 88 --check"
+        run: make check
 
   build-linux:
     runs-on: ubuntu-latest
