Use one command to build for Windows and Linux

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Check Markdown formatting
         run: make check
 
-  build-linux:
+  build:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -50,22 +50,5 @@ jobs:
       - name: Setup Nix cache
         uses: DeterminateSystems/magic-nix-cache-action@main
 
-      - name: Build for Linux
-        run: nix run .#build-linux
-
-  build-windows:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: game
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Nix
-        uses: DeterminateSystems/nix-installer-action@main
-
-      - name: Setup Nix cache
-        uses: DeterminateSystems/magic-nix-cache-action@main
-
-      - name: Build for Windows
-        run: nix run .#build-windows
+      - name: Build
+        run: nix run .#build
