Use one command to build for Windows and Linux (#10)
* Use one command to build for Windows and Linux

* Rename CI jobs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 
 jobs:
-  game-check:
+  game-lint:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -22,7 +22,24 @@ jobs:
       - name: Check formatting
         run: nix run .#check
 
-  markdown-check:
+  game-build:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: game
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install Nix
+        uses: DeterminateSystems/nix-installer-action@main
+
+      - name: Setup Nix cache
+        uses: DeterminateSystems/magic-nix-cache-action@main
+
+      - name: Build
+        run: nix run .#build
+
+  markdown-lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -35,37 +52,3 @@ jobs:
 
       - name: Check Markdown formatting
         run: make check
-
-  build-linux:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: game
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Nix
-        uses: DeterminateSystems/nix-installer-action@main
-
-      - name: Setup Nix cache
-        uses: DeterminateSystems/magic-nix-cache-action@main
-
-      - name: Build for Linux
-        run: nix run .#build-linux
-
-  build-windows:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: game
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Nix
-        uses: DeterminateSystems/nix-installer-action@main
-
-      - name: Setup Nix cache
-        uses: DeterminateSystems/magic-nix-cache-action@main
-
-      - name: Build for Windows
-        run: nix run .#build-windows
