--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,18 +2,64 @@ name: CI
 
 on:
   workflow_dispatch:
+  issue_comment:
+    types: [created]
+  pull_request:
+    types: [opened]
+
+permissions:
+  pull-requests: write
+  contents: read
 
 jobs:
+  welcome:
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/github-script@v7
+        with:
+          script: |
+            github.rest.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+              body: 'Comment `/check` to run CI checks.'
+            });
+
   changes:
+    if: >
+      github.event_name == 'workflow_dispatch' ||
+      (github.event.issue.pull_request && contains(github.event.comment.body, '/check'))
     runs-on: ubuntu-latest
     outputs:
       game: ${{ steps.filter.outputs.game }}
       markdown: ${{ steps.filter.outputs.markdown }}
+      ref: ${{ steps.pr.outputs.ref }}
     steps:
+      - name: Get PR ref
+        id: pr
+        uses: actions/github-script@v7
+        with:
+          script: |
+            if (context.eventName === 'issue_comment') {
+              const pr = await github.rest.pulls.get({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                pull_number: context.issue.number
+              });
+              core.setOutput('ref', pr.data.head.ref);
+            } else {
+              core.setOutput('ref', context.ref);
+            }
+
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ steps.pr.outputs.ref }}
+
       - uses: dorny/paths-filter@v3
         id: filter
         with:
+          base: main
           filters: |
             game:
               - 'game/**'
@@ -29,6 +75,8 @@ jobs:
         working-directory: game
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ needs.changes.outputs.ref }}
 
       - name: Install Nix
         uses: DeterminateSystems/nix-installer-action@main
@@ -45,6 +93,8 @@ jobs:
         working-directory: game
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ needs.changes.outputs.ref }}
 
       - name: Install Nix
         uses: DeterminateSystems/nix-installer-action@main
@@ -58,6 +108,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ needs.changes.outputs.ref }}
 
       - name: Install Nix
         uses: DeterminateSystems/nix-installer-action@main
