--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,17 +1,66 @@
 name: CI
 
 on:
-  pull_request:
-    branches: [ main ]
+  workflow_dispatch:
+  issue_comment:
+    types: [created]
+
+permissions:
+  contents: read
+  pull-requests: read
 
 jobs:
+  changes:
+    if: >
+      github.event_name == 'workflow_dispatch' ||
+      (github.event.issue.pull_request && contains(github.event.comment.body, '/check'))
+    runs-on: ubuntu-latest
+    outputs:
+      game: ${{ steps.filter.outputs.game }}
+      markdown: ${{ steps.filter.outputs.markdown }}
+      ref: ${{ steps.pr.outputs.ref }}
+    steps:
+      - name: Get PR ref
+        id: pr
+        uses: actions/github-script@v7
+        with:
+          script: |
+            if (context.eventName === 'issue_comment') {
+              const pr = await github.rest.pulls.get({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                pull_number: context.issue.number
+              });
+              core.setOutput('ref', pr.data.head.ref);
+            } else {
+              core.setOutput('ref', context.ref);
+            }
+
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ steps.pr.outputs.ref }}
+
+      - uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          base: main
+          filters: |
+            game:
+              - 'game/**'
+            markdown:
+              - '**/*.md'
+
   game-lint:
+    needs: changes
+    if: ${{ needs.changes.outputs.game == 'true' }}
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: game
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ needs.changes.outputs.ref }}
 
       - name: Install Nix
         uses: DeterminateSystems/nix-installer-action@main
@@ -20,12 +69,16 @@ jobs:
         run: nix run .#check
 
   game-build:
+    needs: changes
+    if: ${{ needs.changes.outputs.game == 'true' }}
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: game
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ needs.changes.outputs.ref }}
 
       - name: Install Nix
         uses: DeterminateSystems/nix-installer-action@main
@@ -34,9 +87,13 @@ jobs:
         run: nix run .#build
 
   markdown-lint:
+    needs: changes
+    if: ${{ needs.changes.outputs.markdown == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ needs.changes.outputs.ref }}
 
       - name: Install Nix
         uses: DeterminateSystems/nix-installer-action@main
