--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
 permissions:
   contents: read
   pull-requests: read
+  statuses: write
 
 jobs:
   ci:
@@ -28,9 +29,24 @@ jobs:
                 pull_number: context.issue.number
               });
               core.setOutput('ref', pr.data.head.ref);
+              core.setOutput('sha', pr.data.head.sha);
             } else {
               core.setOutput('ref', context.ref);
+              core.setOutput('sha', context.sha);
             }
+
+      - name: Set pending status
+        uses: actions/github-script@v7
+        with:
+          script: |
+            await github.rest.repos.createCommitStatus({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              sha: '${{ steps.pr.outputs.sha }}',
+              state: 'pending',
+              context: 'CI',
+              target_url: `${process.env.GITHUB_SERVER_URL}/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}`
+            });
 
       - uses: actions/checkout@v4
         with:
@@ -47,3 +63,17 @@ jobs:
 
       - name: Check Markdown formatting
         run: make check
+
+      - name: Set final status
+        if: always()
+        uses: actions/github-script@v7
+        with:
+          script: |
+            await github.rest.repos.createCommitStatus({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              sha: '${{ steps.pr.outputs.sha }}',
+              state: '${{ job.status }}' === 'success' ? 'success' : 'failure',
+              context: 'CI',
+              target_url: `${process.env.GITHUB_SERVER_URL}/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}`
+            });
