--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,79 +1,45 @@
 name: CI
 
 on:
-  workflow_dispatch:
-  issue_comment:
-    types: [created]
-
-permissions:
-  contents: read
-  pull-requests: read
-  statuses: write
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  ci:
-    if: >
-      github.event_name == 'workflow_dispatch' ||
-      (github.event.issue.pull_request && contains(github.event.comment.body, 'ci'))
+  game-lint:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: game
     steps:
-      - name: Get PR ref
-        id: pr
-        uses: actions/github-script@v7
-        with:
-          script: |
-            if (context.eventName === 'issue_comment') {
-              const pr = await github.rest.pulls.get({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                pull_number: context.issue.number
-              });
-              core.setOutput('ref', pr.data.head.ref);
-              core.setOutput('sha', pr.data.head.sha);
-            } else {
-              core.setOutput('ref', context.ref);
-              core.setOutput('sha', context.sha);
-            }
-
-      - name: Set pending status
-        uses: actions/github-script@v7
-        with:
-          script: |
-            await github.rest.repos.createCommitStatus({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              sha: '${{ steps.pr.outputs.sha }}',
-              state: 'pending',
-              context: 'CI',
-              target_url: `${process.env.GITHUB_SERVER_URL}/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}`
-            });
-
       - uses: actions/checkout@v4
-        with:
-          ref: ${{ steps.pr.outputs.ref }}
 
       - name: Install Nix
         uses: DeterminateSystems/nix-installer-action@main
 
-      - name: Check game formatting
-        run: nix run ./game#check
+      - name: Check formatting
+        run: nix run .#check
 
-      - name: Build game
-        run: nix run ./game#build
+  game-build:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: game
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install Nix
+        uses: DeterminateSystems/nix-installer-action@main
+
+      - name: Build
+        run: nix run .#build
+
+  markdown-lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install Nix
+        uses: DeterminateSystems/nix-installer-action@main
 
       - name: Check Markdown formatting
         run: make check
-
-      - name: Set final status
-        if: always()
-        uses: actions/github-script@v7
-        with:
-          script: |
-            await github.rest.repos.createCommitStatus({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              sha: '${{ steps.pr.outputs.sha }}',
-              state: '${{ job.status }}' === 'success' ? 'success' : 'failure',
-              context: 'CI',
-              target_url: `${process.env.GITHUB_SERVER_URL}/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}`
-            });
