--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Check
         run: make check
 
-  build:
+  build-game:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
